--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.app__canvasBackground {
+  height: 100vh;
+  width: 100vw;
+
+  align-items: center;
+  display: flex;
+  justify-content: center;
+
+  background-color: #252a35;
+}
+
+.app__canvasContainer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  object-fit: contain;
+}
+
+.app__canvasContainerText {
   color: white;
+  z-index: 1;
+  font-size: 36pt;
+  line-height: 36pt;
+  font-family: "Raleway";
+  font-weight: 400;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.app__canvasTriangle {
+  height: 10px;
+  width: 20px;
+
+  margin-top: 40px;
 }
 
-@keyframes App-logo-spin {
+.highlight {
+  color: #e31b6d;
+  font-family: "Raleway";
+  font-weight: 600;
+}
+
+.app__title {
+  color: #252a35;
+  font-family: "Raleway";
+  font-size: 36pt;
+  font-weight: 600;
+  text-align: center;
+  padding: 40px;
+  margin-top: 20px;
+}
+
+.projects_titleSlide {
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
   from {
-    transform: rotate(0deg);
+    margin-left: 100%;
+    width: 100%;
   }
   to {
-    transform: rotate(360deg);
+    margin-left: 0%;
+    width: 100%;
   }
+}
+
+.aboutme__container {
+  width: 50%;
+  max-width: 600px;
+
+  margin-top: 0;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.aboutme__description {
+  font-family: "Raleway";
+  font-size: 16pt;
+  font-weight: 200;
+}
+
+.aboutme__image {
+  width: 600px;
+  object-fit: contain;
 }
