--- a/src/App.css
+++ b/src/App.css
@@ -83,21 +83,37 @@
   max-width: 600px;
 
   margin-top: 0;
-  margin-bottom: 40px;
+  margin-right: 20px;
   text-align: center;
 }
 
 .aboutme__description {
   font-family: "Raleway";
-  font-size: 16pt;
+  font-size: 15pt;
   font-weight: 200;
   word-spacing: 1px;
-  color: #888;
+  color: #252a35;
 }
 
 .aboutme__image {
   width: 600px;
   object-fit: contain;
+}
+
+.about__skills__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project__container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  align-content: space-around;
+
+  width: 80%;
 }
 
 @media screen and (max-width: 800px) {
@@ -107,5 +123,18 @@
 
   .app__canvasContainerText {
     font-size: 25pt;
+  }
+}
+
+@media screen and (max-width: 1490px) {
+  .about__skills__container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+  }
+  .aboutme__container {
+    margin-bottom: 40px;
+    margin-right: 0px;
   }
 }
