--- a/src/Projects.css
+++ b/src/Projects.css
@@ -3,3 +3,31 @@
   font-size: 25pt;
   font-weight: 200;
 }
+
+.projects__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  width: 33%;
+  min-width: 350px;
+
+  height: 300px;
+  padding: 20px;
+}
+
+.project__title {
+  font-family: "Raleway";
+  font-weight: 600;
+  font-size: 20pt;
+  margin-bottom: 20px;
+}
+
+.project__description {
+  font-family: "Raleway";
+  font-weight: 400;
+  font-size: 15pt;
+  text-align: center;
+  word-spacing: 2px;
+}
