--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 
   align-items: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 
   background-color: #252a35;
@@ -44,6 +45,7 @@
   width: 20px;
 
   margin-top: 40px;
+  z-index: 99;
 }
 
 .highlight {
