--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,9 @@
 
 .project__container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-
-  align-content: space-around;
+  align-items: center;
 
   width: 80%;
 }
