--- a/src/Projects.css
+++ b/src/Projects.css
@@ -10,11 +10,22 @@
   flex-direction: column;
   align-items: center;
 
-  width: 33%;
+  width: 350px;
   min-width: 350px;
 
   height: 300px;
   padding: 20px;
+
+  margin-top: 40px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 3%;
+
+  /* Some coolio netflix stuff */
+  transition: transform 0.5s;
+}
+
+.projects__container:hover {
+  transform: scale(1.08);
 }
 
 .project__title {
